force-app/main/default/objects/Project_task__c/fields/Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hours__c</fullName>
    <label>Budget Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>