force-app/main/default/objects/Project_task__c/fields/Default_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Time_Type__c</fullName>
    <label>Default Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Type</valueSetName>
    </valueSet>
</CustomField>