force-app/main/default/objects/Project_task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end date for the Project Task.  Hours can only be logged for dates before this date, and after the Start Date.</description>
    <inlineHelpText>The end date for the Project Task.  Hours can only be logged for dates before this date, and after the Start Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>