force-app/main/default/objects/Project_task__c/fields/Lock_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Lock_Time_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock &quot;Time Type&quot;</label>
    <type>Checkbox</type>
</CustomField>