force-app/main/default/objects/Project_task__c/fields/PM_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>PM_Budget_Hours__c</fullName>
    <label>PM Budget Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>