force-app/main/default/objects/Project_task__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date for the Project Task.  Hours can only be logged for dates after this date, and before the End Date.</description>
    <inlineHelpText>The start date for the Project Task.  Hours can only be logged for dates after this date, and before the End Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>