force-app/main/default/objects/Project_task__c/recordTypes/General_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>General_Project_Task</fullName>
    <active>true</active>
    <label>General Project Task</label>
</RecordType>