force-app/main/default/objects/Project_task__c/recordTypes/VTI_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>VTI_Project_Task</fullName>
    <active>true</active>
    <label>VTI Project Task</label>
</RecordType>