force-app/main/default/objects/Project_task__c/validationRules/Account_Risk_Approval_is_not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Risk_Approval_is_not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>!(TEXT(Project__r.Account__r.ApprovalStatus__c) = &apos;Approved&apos;)
&amp;&amp;
!(TEXT(Status__c) = &apos;On Hold&apos;)
&amp;&amp;
!(Project__r.Account__r.Delivery__c = &apos;System&apos;)
&amp;&amp;
($User.ProfileId &lt;&gt; &apos;00e1t000001UNCv&apos;)</errorConditionFormula>
    <errorMessage>The Account related to this project task is not Risk Approved and can therefore only have Status &apos;&apos;On Hold&quot;.</errorMessage>
</ValidationRule>