force-app/main/default/objects/Project_task__c/validationRules/Validate_on_Name_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_on_Name_change</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()
&amp;&amp;
ISCHANGED(Name)
&amp;&amp;
BEGINS(PRIORVALUE(Name),&quot;O - &quot;)
&amp;&amp;
Project__r.RecordType.Name = &quot;Operational&quot;
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1t000001UNCv&quot;
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1t000000Rnwy&quot;</errorConditionFormula>
    <errorMessage>Project Task Name is created automatically and cannot be changed.</errorMessage>
</ValidationRule>